src/components/Preloader.css
/* Preloader Styles */
.loading-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #000;
  color: #fff;
  pointer-events: none;
  z-index: 9999;
}

.counter {
  position: fixed;
  left: 50px;
  bottom: 50px;
  display: flex;
  height: 100px;
  font-size: 100px;
  line-height: 102px;
  clip-path: polygon(0 0, 100% 0, 100% 100px, 0 100px);
  font-weight: 400;
  font-family: 'Inter', sans-serif;
}

.counter-1,
.counter-2,
.counter-3 {
  position: relative;
  top: -15px;
}

.num1offset1 {
  position: relative;
  right: -25px;
}

.num1offset2 {
  position: relative;
  right: -10px;
}

.loader {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 300px;
  height: 50px;
  transform: translate(-50%, -50%);
  display: flex;
  background: rgb(80, 80, 80);
  z-index: 10001;
  margin-top: 20px;
}

.loader-1 {
  position: relative;
  background: #fff;
  width: 200px;
}

.loader-2 {
  position: relative;
  width: 100px;
  background: #fff;
}

.bar {
  height: 50px;
}

.preloader-content {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 10000;
}

.preloader-header {
  position: relative;
  width: max-content;
  height: max-content;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.preloader-title {
  font-size: 80px;
  text-align: center;
  position: relative;
  top: 80px;
  margin: 20px 0;
  text-transform: uppercase;
  font-weight: 900;
  font-family: 'Inter', sans-serif;
  letter-spacing: -0.02em;
  z-index: 10002;
  color: #fff;
  text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
}

.preloader-title:first-child {
  margin-bottom: 80px;
}

.preloader-title:last-child {
  margin-top: 80px;
}

@media (max-width: 768px) {
  .counter {
    left: 20px;
    bottom: 20px;
    font-size: 60px;
    height: 60px;
    line-height: 62px;
    clip-path: polygon(
      0 0,
      100% 0,
      100% 60px,
      0 60px
    );
  }

  .counter-1,
  .counter-2,
  .counter-3 {
    top: -10px;
  }

  .loader {
    width: 200px;
    height: 30px;
    top: 50%;
    margin-top: 10px;
  }

  .loader-1 {
    width: 130px;
  }

  .loader-2 {
    width: 70px;
  }

  .bar {
    height: 30px;
  }

  .preloader-title {
    font-size: 40px;
  }
}

